samples/_failures_safe/1761366167_6bcf5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ebbe2de.c: In function ‘main’:
./samples/SAFE/__tmp_7ebbe2de.c:169:13: error: expected ‘;’ at end of input
  169 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_7ebbe2de.c:169:5: error: expected declaration or statement at end of input
  169 |     return 0
      |     ^~~~~~
